Get the home position nicely located on the screen ontop of the canvas

--- a/css/pointerly.css
+++ b/css/pointerly.css
@@ -3,5 +3,11 @@ body {
 }
 
 canvas {
-	position: relative;
+	position: fixed;
+	z-index: 1;
+}
+
+.homePosition {
+	position: fixed;
+	z-index: 2;
 }
